fix anchor click overflowing

--- a/_sass/_skew.scss
+++ b/_sass/_skew.scss
@@ -1,7 +1,3 @@
-.wrapper {
-  overflow-y: hidden;
-}
-
 .contact-segment-wrapper,
 .footer-segment-wrapper {
   transform: skew(0,2deg);
@@ -16,4 +12,10 @@
   margin-top: -1px;
   margin-bottom: -2%;
   padding-bottom: 2%;
+}
+
+.footer-segment-crop {
+  margin-top: -2%;
+  padding-top: 2%;
+  overflow-y: hidden;
 }
